--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold mb-4">工業4.0神經中樞系統<br/>讓產線擁有自主決策能力</h1>
+                        <h1 class="text-white font-weight-bold mb-4">研楷有限公司（Aperture Science),專注於系統整合，為半導體行業、能源業及研究單位提供高效解決方案，提升生產效率、技術創新與運營效能，助力客戶成功</h1>
                         <p class="text-white-75 lead">78%客戶在導入後12個月內實現ROI正成長</p>
                         <hr class="divider" />
                     </div>
@@ -78,7 +78,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">當傳統巡檢還在依賴經驗，我們已實現98%決策數據化</h2>
                         <hr class="divider divider-light" />
-                        <p class="text-white-75 mb-4">能源脈搏監測系統：揪出15%隱性能耗黑洞<br/> 視覺化生產透視鏡：0.02mm級瑕疵無損檢測<br/> 設備健康預警模型：提前72小時預判故障風險安全<br/>態勢感知中樞：建構三維空間風險熱力圖</p>
+<!--                         <p class="text-white-75 mb-4">能源脈搏監測系統：揪出15%隱性能耗黑洞<br/> 視覺化生產透視鏡：0.02mm級瑕疵無損檢測<br/> 設備健康預警模型：提前72小時預判故障風險安全<br/>態勢感知中樞：建構三維空間風險熱力圖</p> -->
                         <a class="btn btn-light btn-xl" href="#services">與研楷合作</a>
                     </div>
                 </div>
@@ -101,13 +101,13 @@
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-camera-video fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">【AI視覺質檢戰情室】</h3>
-                            <p class="text-muted mb-0">「給機器裝上會自學的工業之眼」<br/>√ 跨光譜影像融合技術 <br/>√ 動態公差校準系統 <br/>√ 瑕疵溯源性分析</p>
+                            <p class="text-muted mb-0">「給機器裝上會自學的工業之眼」<br/>√ 光學與量測的多項校驗服務 <br/>√ 轉移off-line 至In-line 平台 <br/>√ 跨學界技轉至業界的產學開發</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-cpu fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">【產線物聯神經網絡】</h3>
+                            <h3 class="h4 mb-2">【實驗室儀器服務】</h3>
                             <p class="text-muted mb-0">「從自動到系統智動的拼圖」<br/>√ 多協議設備通訊閘道 <br/>√ 離散事件仿真模型 <br/>√ OEE提升決策樹</p>
                         </div>
                     </div>
