--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold mb-4">研楷有限公司（Aperture Science),專注於系統整合，為半導體行業、能源業及研究單位提供高效解決方案，提升生產效率、技術創新與運營效能，助力客戶成功</h1>
+                        <h1 class="text-white font-weight-bold mb-4">研楷有限公司專注於系統整合，為半導體、能源業及研究單位提供高效解決方案，提升生產效率、技術創新與運營效能</h1>
                         <p class="text-white-75 lead">78%客戶在導入後12個月內實現ROI正成長</p>
                         <hr class="divider" />
                     </div>
@@ -107,7 +107,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-cpu fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">【實驗室儀器服務】</h3>
+                            <h3 class="h4 mb-2">【產線物聯神經網絡】</h3>
                             <p class="text-muted mb-0">「從自動到系統智動的拼圖」<br/>√ 多協議設備通訊閘道 <br/>√ 離散事件仿真模型 <br/>√ OEE提升決策樹</p>
                         </div>
                     </div>
