--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-camera-video fs-1 text-primary"></i></div>
-                            <h3 class="h4 mb-2">【AI視覺質檢戰情室】</h3>
+                            <h3 class="h4 mb-2">【實驗室儀器服務】</h3>
                             <p class="text-muted mb-0">「給機器裝上會自學的工業之眼」<br/>√ 光學與量測的多項校驗服務 <br/>√ 轉移off-line 至In-line 平台 <br/>√ 跨學界技轉至業界的產學開發</p>
                         </div>
                     </div>
