--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
             <div class="container px-4 px-lg-5 h-100">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold mb-4">研楷有限公司專注於系統整合，為半導體、能源業及研究單位提供高效解決方案，提升生產效率、技術創新與運營效能</h1>
-                        <p class="text-white-75 lead">78%客戶在導入後12個月內實現ROI正成長</p>
+                        <h1 class="text-white font-weight-bold mb-4">研楷有限公司 <br/> xAperture Science</h1>
+                        <p class="text-white-75 lead">專注於系統整合，為半導體、能源業及研究單位提供高效解決方案，提升生產效率、技術創新與運營效能</p>
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">我們不是系統供應商，而是您的產線神經外科醫生</p>
+<!--                         <p class="text-white-75 mb-5">我們不是系統供應商，而是您的產線神經外科醫生</p> -->
                         <a class="btn btn-primary btn-xl" href="#about">瞭解更多</a>
                     </div>
                 </div>
