--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta name="author" content="研楷有限公司" />
         <meta name="description" content="研楷有限公司提供精準的光學量測技術 涵蓋紅外線、可見光及X光影像分析" />
         <meta name="keywords" content="光學量測, 紅外線影像分析, X光分析, AOI檢測, 工業相機" />
-        <meta name="robots" content="index,follow" />
+<!--         <meta name="robots" content="index,follow" /> -->
         <meta property="og:title" content="精準光學量測服務 | 研楷有限公司" />
         <meta property="og:description" content="專注於系統整合，為半導體、能源業及研究單位提供高效解決方案，提升生產效率、技術創新與運營效能" />
         <meta property="og:image" content="https://www.aperturescience.com.tw/assets/logo.png" />
